[package]
name = "repo_walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
ignore = "0.4"
clap = { version = "4.3", features = ["derive"] }
regex = "1.10.5"
itertools = "0.13.0"
gix = { version = "0.63", features = ["blob-diff"]}
hex = "0.4.3"
tiktoken-rs = "0.5.8"
serde_json = "1.0"
colored = "2.1.0"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
libc = "0.2"
